--- a/views/admin/voucher/table.ejs
+++ b/views/admin/voucher/table.ejs
@@ -27,7 +27,7 @@
       </td>
       <td>
         <img
-          src="http://localhost:3000/uploads/<%= voucher[i].thumbnial %>"
+          src="https://bwa-storegg-alvito.herokuapp.com/uploads/<%= voucher[i].thumbnial %>"
           id="perview"
           width="30%"
           height="30%"
