--- a/views/admin/voucher/edit.ejs
+++ b/views/admin/voucher/edit.ejs
@@ -105,7 +105,7 @@
                         <input type="file" name="image" class="form-control" id="image" placeholder="Masukan gambar">
                         <br>
                         <img id="perview" alt="test"
-                          src="http://localhost:3000/uploads/<%= voucher.thumbnial %>">
+                          src="https://bwa-storegg-alvito.herokuapp.com/uploads/<%= voucher.thumbnial %>">
                       </div>
               <!-- /.card-body -->
 
